# gr-test

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: baseline-numbers.md  evermemos-architecture-deep-dive.md  evermemos-reference-notes.md  evermemos-setup-checklist.md  gaama-fork-points.md  gaama-reference-notes.md  grouping-node-principle.md  grouping-principle-integration.md  hinge-compliance-audit.md  hinge-north-star.md  hinge-technical-notes.md  hipporag-reference-notes.md  hyper-triplet-implementation-plan-v2.md  hyper-triplet-implementation-plan-v3.md  hyper-triplet-implementation-plan-v4.md  hyper-triplet-implementation-plan-v5.md  hyper-triplet-implementation-plan.md  hypergraph-memory-lineage.md  hypergraph-rag-reference-notes.md  hypermem-reference-notes.md  my-own-spec-vs-current-direction.md  my-own-test-design-spec.md  paper-outline-draft.md  phase-f-runbook.md  work-log-status.md
scripts/: evermemos-down.sh  evermemos-logs.sh  evermemos-status.sh  evermemos-up.sh  fetch-locomo10.sh  run_phase_f.py  smoke_test_openai.py
tests/: test_ablation_runner.py  test_baseline_adapters.py  test_eval_skeleton.py  test_hyper_triplet_ablation.py  test_hyper_triplet_boundary.py  test_hyper_triplet_community.py  test_hyper_triplet_extractor.py  test_hyper_triplet_importance.py  test_hyper_triplet_ltm_creator.py  test_hyper_triplet_pipeline.py  test_hyper_triplet_pipeline_v5.py  test_hyper_triplet_ppr.py  test_hyper_triplet_retrieval.py  test_hyper_triplet_retrieval_stages.py  test_hyper_triplet_star_store.py  test_hyper_triplet_v5_layers.py  (+8 more)
(+42 files in other folders)
