[project]
name = "hyper-triplet-bench"
version = "0.0.1"
description = "HippoRAG2 vs GAAMA vs Hyper Triplet on LoCoMo-10"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "httpx>=0.27",
    "orjson>=3.10",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "tqdm>=4.66",
    "numpy>=1.26,<2.3",
    "networkx>=3.3",
]

[project.optional-dependencies]
llm = [
    "openai>=1.40",
    "tenacity>=8.5",
    "tiktoken>=0.7",
]
embed = [
    "sentence-transformers>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/htb"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
